# Corteva-Challenge

./: README.md  app.py  pyproject.toml  requirements.txt  run.py
.devcontainer/: docker-compose.yml
answers/: stats.json
corteva_challenge/: __init__.py  config.py  ingest.py  models.py  utilities.py  views.py
src/: orm.py  utilities.py
tests/: conftest.py  test_ingest.py  test_setup.py  test_views.py
